[HK] uses java 1.8 on maven compile (#365)
and removes MaxPermSize JRE options

Signed-off-by: Frank Gasdorf <fgdrf@users.sourceforge.net>